--- a/fixme.dtx
+++ b/fixme.dtx
@@ -2279,7 +2279,7 @@
 %    \begin{macrocode}
 \long\def\@@@fxbeginsenv#1#2#3{%
   \@fxpostconfigure\let\@fxpostconfigure\relax%
-  \@@fxsnote{#1}{#2}{#3}
+  \@@fxsnote{#1}{#2}{#3}%
   \@@@@fxbeginenv{#1}}
 \long\def\@@fxbeginsenv#1#2#3{%
   \@fxsetkeys{layout}{noinline}%
