--- a/fixme.dtx
+++ b/fixme.dtx
@@ -488,7 +488,7 @@
 % typeset, compilation breakage with the ``Floats lost'' message \etc If
 % you're facing this problem, you need to change your layout locally.
 %
-% \subsubsubsection{Marginal paragraphs showing up on the wrong page}
+% \subsubsubsection{Marginal paragraphs showing up on the wrong margin}
 % You want to look at the \texttt{mparhack} package.
 %
 % \subsubsubsection{ACM classes compatibility}
@@ -548,6 +548,7 @@
 %
 % \DescribeLayout{plain}
 % \DescribeLayout{color}
+% \DescribeLayout{colorsig}
 % \begin{center}
 %   \DeleteShortVerb{\|}
 %   \begin{tabular}{|l|c|p{5cm}|}
@@ -556,6 +557,7 @@
 %     \hline\hline
 %     \texttt{plain} & & Display contents as-is\\
 %     \texttt{color} & \texttt{*} & Display contents in color\\
+%     \texttt{colorsig} & \texttt{*} & Display signed contents in color\\
 %     \hline
 %   \end{tabular}
 %   \MakeShortVerb{\|}
@@ -572,9 +574,15 @@
 % \DescribeColor{fxerror}
 % \DescribeColor{fxfatal}
 % The \texttt{color} environment layout uses one of four colors named
-% according to the note's importance level to display its contents. This
-% layout is used in the \texttt{color} theme (see section
-% \sectionref{sec:manual:themes}).
+% \texttt{fx*}, according to the note's importance level, to display its
+% contents. It also avoids printing the note level, since that information is
+% already conveyed by the color. This layout is used in the \texttt{color}
+% theme (see section \sectionref{sec:manual:themes}).
+%
+% The \texttt{colorsig} environment layout works like the \texttt{color} one,
+% but also prints the author's tag (see \sectionref{sec:manual:modes}) as a
+% signature instead of as a prefix. It is used by the \texttt{colorsig} theme
+% (see section \sectionref{sec:manual:themes}).
 %
 % \subsection{Controlling the layout of \fx
 %   targets\label{sec:manual:targetlayoutcontrol}}
