--- a/fixme.dtx
+++ b/fixme.dtx
@@ -823,12 +823,11 @@
 %
 % The other remark is about the default \texttt{fx*} user interface: the
 % \texttt{fixme} default user is special in that it is the only registered
-% user to honor global \texttt{author} options (provided in the call to
+% user to honor a global \texttt{author} option (provided in the call to
 % \cs{usepackage} or \cs{fxsetup}). The intended use of this is that the
 % \emph{main} author of the document uses the \texttt{fx*} interface
-% (preferably with a personal \texttt{author} setting, different from the
-% \fx logo), and all other authors are registered via
-% \cs{FXRegisterAuthor}.
+% (preferably with a personal \texttt{author} setting, different from the \fx
+% logo), and all other authors are registered via \cs{FXRegisterAuthor}.
 %
 % \paragraph{Globally switching to collaborative mode}
 % We're getting close, but we're not quite there yet. Perhaps you would like
