--- a/fixme.dtx
+++ b/fixme.dtx
@@ -588,10 +588,9 @@
 % already conveyed by the color. This layout is used in the \texttt{color}
 % theme (see section \sectionref{sec:manual:themes}).
 %
-% The \texttt{colorsig} environment layout works like the \texttt{color} one,
-% but also prints the author's tag (see \sectionref{sec:manual:modes}) as a
-% signature instead of as a prefix. It is used by the \texttt{colorsig} theme
-% (see section \sectionref{sec:manual:themes}).
+% The \texttt{colorsig} environment layout combines the features of the
+% \texttt{signature} and \texttt{color} ones. It is used by the
+% \texttt{colorsig} theme (see section \sectionref{sec:manual:themes}).
 %
 % \subsection{Controlling the layout of \fx
 %   targets\label{sec:manual:targetlayoutcontrol}}
